--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -14,7 +14,7 @@
   font-family: "Righteous", sans-serif;
 }
 
-.roboto-mono {
+.roboto-mono-font {
   font-family: "Roboto Mono", monospace;
   font-optical-sizing: auto;
 }
